add new projects

--- a/portfolio/assets/scss/_footer.scss
+++ b/portfolio/assets/scss/_footer.scss
@@ -1,10 +1,10 @@
-footer{
+footer {
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	width: 100%;
 	z-index: 5;
-	.s-container{
+	.s-container {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
@@ -13,7 +13,7 @@ footer{
 	}
 }
 
-.cv-item{
+.cv-item {
 	color: #fff;
 	display: inline-flex;
 	align-items: center;
@@ -21,51 +21,52 @@ footer{
 	position: relative;
 	overflow: hidden;
 	padding-right: 10px;
-	strong{
+	strong {
 		color: $accent_color;
 		font-weight: normal;
 		margin-left: 8px;
-		transition: .7s cubic-bezier(.165,.85,.45,1);
+		transition: 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
 	}
-	span{
+	span {
 		font-weight: normal;
 		transform: translateY(0);
-		transition: opacity .7s cubic-bezier(.165,.85,.45,1), color .7s cubic-bezier(.165,.85,.45,1),transform .7s cubic-bezier(.165,.85,.45,1);
-		&.cv-text-hover{
+		transition: opacity 0.7s cubic-bezier(0.165, 0.85, 0.45, 1), color 0.7s cubic-bezier(0.165, 0.85, 0.45, 1),
+			transform 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
+		&.cv-text-hover {
 			position: absolute;
 			opacity: 0;
 			transform: translateY(100%);
 			color: $accent_color;
 		}
 	}
-	&:hover{
-		strong{
+	&:hover {
+		strong {
 			transform: translateX(5px);
 		}
-		span.cv-text{
+		span.cv-text {
 			opacity: 0;
 			transform: translateY(-100%);
 		}
-		span.cv-text-hover{
+		span.cv-text-hover {
 			opacity: 1;
 			transform: translateY(0%);
 		}
 	}
 }
 
-.footer-scroll{
+.footer-scroll {
 	display: inline-flex;
 	align-items: center;
 	font-weight: normal;
 	color: #fff;
-	transition: color .35s ease-out;
-	svg{
+	transition: color 0.35s ease-out;
+	svg {
 		margin-left: 10px;
-		transition: .7s cubic-bezier(.165,.85,.45,1);
+		transition: 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
 	}
-	&:hover{
+	&:hover {
 		color: $accent_color;
-		svg{
+		svg {
 			fill: $accent_color;
 			transform: translateX(5px);
 		}
