--- a/portfolio/assets/scss/header/_header.scss
+++ b/portfolio/assets/scss/header/_header.scss
@@ -1,56 +1,84 @@
 /*-------------------- MENU --------------------*/
+
+/*-------------------- MENU --------------------*/
 header {
-	min-height:50px;
-	position:relative;
-	width:100%;
+	min-height: 50px;
+	position: relative;
+	width: 100%;
 	display: flex;
 	align-items: center;
 	position: fixed;
 	z-index: 10;
-	padding: 0 100px;
-	&.header-scroll{
-		.header-cover{
-			padding: 15px 0;
-		}
+	padding-left: 4vw;
+	padding-right: 4vw;
+	transition:
+		transform 0.3s ease,
+		background 0.3s ease;
+
+	.scroll-up & {
+		transform: translateY(0);
+		background-color: $black;
 	}
-	.header-cover{
-		border-bottom: 1px solid rgba(255,255,255,.1);
-		padding: 30px 0;
-		transition: .35s ease-out;
+
+	.scroll-down & {
+		transform: translateY(-100%);
+		background-color: $black;
+	}
+
+	.header-cover {
+		border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+		padding-top: 30px;
+		padding-bottom: 30px;
+		transition: 0.35s ease-out;
 		flex: 0 0 100%;
 		display: flex;
 		align-items: center;
-		.header-col{
+		transition:
+			opacity 0.35s ease-out,
+			transform 0.35s ease-out;
+		opacity: 0;
+		transform: translateY(-40px);
+
+		@media (max-width: map-get($media, "lg")) {
+			padding-top: 20px;
+			padding-bottom: 20px;
+		}
+
+		.hide-loader & {
+			opacity: 1;
+			transform: translateY(0);
+			transition-delay: 2.5s;
+		}
+		.header-col {
 			max-width: 33.33%;
 			flex: 0 0 33.33%;
 		}
 	}
 }
 
-.header-menu{
+.header-menu {
 	display: flex;
 	justify-content: flex-end;
 }
 
 /*--------------------- HEADER TOGGLE ---------------------*/
-.header-toggle{
+.burger {
 	position: relative;
-	width: 40px;
-	height: 40px;
+	width: 30px;
+	height: 30px;
 	border: 0;
 	margin: 0;
 	padding: 0;
-	outline: 0;
 	background-color: transparent;
 	z-index: 12;
-	>span{
+	> span {
 		position: absolute;
 		display: block;
 		height: 2px;
 		top: 50%;
 		right: 0;
 		overflow: hidden;
-		transition: transform .25s cubic-bezier(.455, .03, .515, .955);
+		transition: transform 0.25s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 		&:first-child {
 			width: 30px;
 			margin-top: -5px;
@@ -60,8 +88,8 @@ header {
 			margin-top: 5px;
 		}
 		&:before,
-		&:after{
-			content: '';
+		&:after {
+			content: "";
 			position: absolute;
 			top: 0;
 			right: 0;
@@ -69,44 +97,44 @@ header {
 			width: inherit;
 			background-color: #fff;
 			display: inline-block;
-			transition: transform .2s cubic-bezier(.455, .03, .515, .955);
+			transition: transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 		}
 		&:before {
 			transform: translateX(-100%);
 		}
 	}
-	&:hover{
-		>span{
+	&:hover {
+		> span {
 			&:first-child:before {
 				transform: translateX(0);
-				transition-delay: .1s
+				transition-delay: 0.1s;
 			}
 			&:first-child:after {
-				transform: translateX(100%)
+				transform: translateX(100%);
 			}
 
 			&:last-child:before {
 				transform: translateX(0);
-				transition-delay: .2s
+				transition-delay: 0.2s;
 			}
 
 			&:last-child:after {
-				transition-delay: .1s;
-				transform: translateX(100%)
+				transition-delay: 0.1s;
+				transform: translateX(100%);
 			}
 		}
 	}
-	&-close{
-		>span{
+	&.active {
+		> span {
 			&:after,
-			&:before{
+			&:before {
 				background-color: #93815d;
 			}
-			&:first-child{
+			&:first-child {
 				transform: rotate(-45deg);
 				margin: 0;
 			}
-			&:last-child{
+			&:last-child {
 				transform: rotate(45deg);
 				width: 30px;
 				margin: 0;
@@ -116,68 +144,79 @@ header {
 }
 
 /*--------------------- NAV MENU ---------------------*/
-.nav-menu{
-	backdrop-filter: blur(5px);
-	background-color: rgba(24,24,26,0.75);
+.nav-menu {
+	position: fixed;
 	top: 0;
 	right: -100px;
-	position: fixed;
-	height: 100%;
 	max-width: 600px;
 	width: 100%;
+	height: 100vh;
 	z-index: 11;
-	padding: 100px;
-	transition: .5s ease-out;
+	padding: 100px 4vw;
+	background-color: rgba(28, 29, 33, 0.85);
 	opacity: 0;
+	backdrop-filter: blur(5px);
 	pointer-events: none;
-	&.active{
+	transition: 0.3s ease-out;
+	@media (max-width: map-get($media, "lg")) {
+		padding-top: 70px;
+		padding-bottom: 70px;
+	}
+	&.active {
 		right: 0;
 		opacity: 1;
 		pointer-events: auto;
 	}
-	h6{
-		font-size: 32px;
+	h6 {
+		font-size: 1.6em;
 	}
 }
-.nav-list{
+.nav-list {
 	padding-top: 34px;
-	border-top: 1px solid rgba(255,255,255,0.1);
 	margin-top: 34px;
-	li{
-		&:not(:last-child){
+	border-top: 1px solid rgba(255, 255, 255, 0.1);
+	@media (max-width: map-get($media, "lg")) {
+		padding-top: 24px;
+		margin-top: 24px;
+	}
+	li {
+		&:not(:last-child) {
 			margin-bottom: 20px;
 		}
-		strong{
-			color: $accent_color;
-			min-width: 100px;
+		strong {
+			color: $accent;
+			min-width: 110px;
 		}
-		p{
+		p {
 			position: relative;
 			overflow: hidden;
 		}
-		span{
+		span {
 			display: block;
 			top: 0;
 			left: 0;
 			transform: translateY(0);
-			transition: opacity .7s cubic-bezier(.165,.85,.45,1),color .7s cubic-bezier(.165,.85,.45,1),transform .7s cubic-bezier(.165,.85,.45,1);
-			&.link-item-hover{
+			transition:
+				opacity 0.7s cubic-bezier(0.165, 0.85, 0.45, 1),
+				color 0.7s cubic-bezier(0.165, 0.85, 0.45, 1),
+				transform 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
+			&.link-item-hover {
 				position: absolute;
 				opacity: 0;
 				transform: translateY(100%);
-				color: $accent_color;
+				color: $accent;
 			}
 		}
-		.link{
+		.link {
 			color: #fff;
 			display: inline-flex;
 			align-items: center;
-			&:hover{
-				span.link-item{
+			&:hover {
+				span.link-item {
 					opacity: 0;
 					transform: translateY(-100%);
 				}
-				span.link-item-hover{
+				span.link-item-hover {
 					opacity: 1;
 					transform: translateY(0%);
 				}
@@ -188,33 +227,41 @@ header {
 
 /*-------------------- LOGO --------------------*/
 .logo {
-	color: $accent_color;
+	color: $accent;
 	font-size: 20px;
 	text-decoration: none;
 	text-transform: uppercase;
 	letter-spacing: 0.05em;
+	line-height: 1;
 	font-weight: 700;
-	span{
+	display: flex;
+	span {
 		font-weight: 400;
 		color: #fff;
+		display: block;
 	}
 }
 
 /*---------------- SOCIAL-LIST ----------------*/
-.social-list{
+.social-list {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	li{
-		margin: 0 15px;
-		a{
+	li {
+		+ li {
+			margin-left: 30px;
+			@media (max-width: map-get($media, "xs")) {
+				margin-left: 12px;
+			}
+		}
+		a {
 			display: block;
 			position: relative;
 			overflow: hidden;
 			width: 30px;
-			span{
+			span {
 				color: #fff;
-				font-size: 16px;
+				font-size: 0.9em;
 				height: 30px;
 				line-height: 30px;
 				position: relative;
@@ -223,23 +270,26 @@ header {
 				width: 100%;
 				text-align: center;
 				transform: translateY(0);
-				transition: opacity .7s cubic-bezier(.165,.85,.45,1),color .7s cubic-bezier(.165,.85,.45,1),transform .7s cubic-bezier(.165,.85,.45,1);
+				transition:
+					opacity 0.7s cubic-bezier(0.165, 0.85, 0.45, 1),
+					color 0.7s cubic-bezier(0.165, 0.85, 0.45, 1),
+					transform 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				&:last-child{
-					color: $accent_color;
+				&:last-child {
+					color: $accent;
 					position: absolute;
 					opacity: 0;
 					transform: translateY(100%);
 				}
 			}
-			&:hover{
-				span:first-child{
+			&:hover {
+				span:first-child {
 					opacity: 0;
 					transform: translateY(-100%);
 				}
-				span:last-child{
+				span:last-child {
 					opacity: 1;
 					transform: translateY(0%);
 				}
@@ -247,6 +297,3 @@ header {
 		}
 	}
 }
-
-
-
