--- a/portfolio/assets/scss/components/_portfolio.scss
+++ b/portfolio/assets/scss/components/_portfolio.scss
@@ -44,18 +44,20 @@
   }
   &__item {
     width: 100%;
-    min-height: 190px;
     perspective: 1000px;
     position: relative;
     display: flex;
-    aspect-ratio: 16 / 9;
+
     .item-cover {
       position: relative;
       display: flex;
+      align-items: flex-end;
       width: 100%;
       height: 100%;
       transform-style: preserve-3d;
       will-change: transform;
+      min-height: 220px;
+      aspect-ratio: 16 / 9;
       img {
         object-fit: cover;
         position: absolute;
