--- a/portfolio/assets/scss/header/_header.scss
+++ b/portfolio/assets/scss/header/_header.scss
@@ -26,6 +26,9 @@ header {
 	}
 
 	.header-cover {
+		pointer-events: none;
+		position: relative;
+		z-index: 10;
 		border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 		padding-top: 30px;
 		padding-bottom: 30px;
@@ -63,6 +66,7 @@ header {
 
 /*--------------------- HEADER TOGGLE ---------------------*/
 .burger {
+	pointer-events: auto;
 	position: relative;
 	width: 30px;
 	height: 30px;
@@ -147,23 +151,25 @@ header {
 .nav-menu {
 	position: fixed;
 	top: 0;
-	right: -100px;
+	right: 0;
 	max-width: 600px;
 	width: 100%;
 	height: 100vh;
-	z-index: 11;
-	padding: 100px 4vw;
+	z-index: 5;
+	padding: 134px 4vw 100px;
 	background-color: rgba(28, 29, 33, 0.85);
 	opacity: 0;
 	backdrop-filter: blur(5px);
 	pointer-events: none;
+	transform: translateX(100px);
 	transition: 0.3s ease-out;
 	@media (max-width: map-get($media, "lg")) {
-		padding-top: 70px;
+		padding-top: 100px;
+		max-width: 450px;
 		padding-bottom: 70px;
 	}
 	&.active {
-		right: 0;
+		transform: translateX(0);
 		opacity: 1;
 		pointer-events: auto;
 	}
@@ -172,13 +178,7 @@ header {
 	}
 }
 .nav-list {
-	padding-top: 34px;
-	margin-top: 34px;
-	border-top: 1px solid rgba(255, 255, 255, 0.1);
-	@media (max-width: map-get($media, "lg")) {
-		padding-top: 24px;
-		margin-top: 24px;
-	}
+	margin-top: 24px;
 	li {
 		&:not(:last-child) {
 			margin-bottom: 20px;
@@ -235,6 +235,7 @@ header {
 	line-height: 1;
 	font-weight: 700;
 	display: flex;
+	pointer-events: auto;
 	span {
 		font-weight: 400;
 		color: #fff;
@@ -247,6 +248,7 @@ header {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	pointer-events: auto;
 	li {
 		+ li {
 			margin-left: 30px;
